--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -99,8 +99,8 @@
     <string name="download_sorting_created">Подреди по дата на създаване</string>
     <string name="download_section_framework">Framework</string>
     <string name="download_section_update_available">Налично обновление</string>
-    <string name="download_section_installed">Инсталиран</string>
-    <string name="download_section_not_installed">Не е инсталиран</string>
+    <string name="download_section_installed">Инсталирани</string>
+    <string name="download_section_not_installed">Не са инсталирани</string>
     <string name="download_section_24h">Преди 24 часа</string>
     <string name="download_section_7d">Преди 7 дни</string>
     <string name="download_section_30d">Преди 30 дни</string>
@@ -116,7 +116,7 @@
     <string name="settings_enable_downloads">Позволи изтегляния</string>
     <string name="settings_enable_downloads_summary">Позволи на Xposed Installer да проверява за обновления и нови модули</string>
     <string name="settings_group_experimental">Експериментално</string>
-    <string name="settings_disable_resources">Disabled resource hooks</string>
+    <string name="settings_disable_resources">Изключевно прихващане на ресурси</string>
     <string name="settings_disable_resources_summary">Решаване на конфликти с темите\n<b>ВНИМАНИЕ:</b> Модули които се опитват да променят ресурсите няма да работят.</string>
     <string name="settings_performance_experiment">Експеримент за производителност</string>
     <string name="settings_performance_experiment_summary">Ако позволите това, производителността на системата може да се увеличи, да се намали или да се запази. Чувствайте се свободни да пробвате и да дадете отзиви. Необходимо е да преинсталирате framework и да рестартирате след промяна на тази настройка.</string>
@@ -135,14 +135,14 @@
     <!-- About tab -->
     <string name="about_developers_label">Разработчици:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> и <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
-    <string name="about_developers_warning">Моля <b>не</b> се свързвайте с нс директно, използвайте долния линк.</string>
+    <string name="about_developers_warning">Моля <b>не</b> се свързвайте с нас директно, използвайте долния линк.</string>
     <string name="about_translator_label">Преводач:</string>
     <string name="translator">mamutcho</string>
     <string name="about_version_label">Версия:</string>
     <string name="about_source_label">Изходен код:</string>
-    <string name="about_support_label">Поддръжка на:</string>
-    <string name="about_support_warning">Тази връзка е за инсталатора <b>само</b> на framework! Ако имате нужда от помощ с някой от модулите, <b>не</b> я използвайте, свържете се с автора на модула.</string>
-    <string name="about_libraries_label">Използвано библиотеки:</string>
+    <string name="about_support_label">Поддръжка:</string>
+    <string name="about_support_warning">Тази връзка е <b>само</b> за инсталатора на framework! Ако имате нужда от помощ с някой от модулите, <b>не</b> я използвайте, свържете се с автора на модула.</string>
+    <string name="about_libraries_label">Използвани библиотеки:</string>
 
     <!-- DownloadView -->
     <string name="download_view_download">Изтегли</string>
