--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -4,22 +4,22 @@
     <!-- General/various strings -->
     <string name="menuSend">Send</string>
     <string name="menuSaveToSd">Lagre på SD-kort</string>
-    <string name="xposed_not_active">Den siste versjonen av Xposed er ikke aktiv. Installerte du og restartet enheten?</string>
+    <string name="xposed_not_active">Den siste versjonen av Xposed er ikke aktiv. Installerte du og omstartet enheten?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Velkommen til  <b>Xposed Installer</b>!\nVennligst velg hva du ønsker å gjøre:</string>
-    <string name="tabInstall">Rammeverk</string>
+    <string name="tabInstall">Xposed Framework</string>
     <string name="tabInstallDescription">Her kan du behandle Xposed Framework, som er nødvendig for at moduler skal fungere.</string>
     <string name="tabModules">Moduler</string>
-    <string name="tabModulesDescription">Rammeverket i seg selv legger ikke til funksjoner, men du trenger moduler for det. I denne seksjonen så kan du aktivere moduler etter at du har installert dem.</string>
-    <string name="tabDownload">Last ned</string>
+    <string name="tabModulesDescription">Xposed Framework i seg selv legger ikke til funksjoner, men du trenger moduler for det. I denne seksjonen så kan du aktivere moduler etter at du har installert dem.</string>
+    <string name="tabDownload">Nedlastinger</string>
     <string name="tabDownloadDescription">Denne seksjonen gir deg tilgang til en pakkebrønn som inneholder moduler, slik at du kan søke etter og laste ned de modulene du ønsker og for å holde dem oppdaterte.</string>
     <string name="welcome_framework_update_available">En oppdatering for Xposed Framework er tilgjengelig (%s).</string>
     <string name="welcome_update_available">En eller flere oppdatering(er) for moduler er tilgjengelig.</string>
     <string name="tabSettings">Innstillinger</string>
-    <string name="tabSettingsDescription">Gå til denne seksjonen for å konfigurere Xposed Installeren og rammeverk.</string>
+    <string name="tabSettingsDescription">Gå til denne seksjonen for å konfigurere Xposed Installeren og Framework.</string>
     <string name="tabLogs">Logger</string>
-    <string name="tabLogsDescription">Vis og lagre/send logger av Xposed rammeverket.</string>
+    <string name="tabLogsDescription">Vis og lagre/send logger av Xposed Framework.</string>
     <string name="tabAbout">Om</string>
     <string name="tabAboutDescription">Lær mer om menneskene som har utviklet Xposed, hvor du kan få støtte for denne appen etc.</string>
 
@@ -29,17 +29,17 @@
     <string name="installedVersion">aktive</string>
     <string name="latestVersion">buntet</string>
     <string name="versions">Versjoner:</string>
-    <string name="install_header_reboot">Restart</string>
-    <string name="soft_reboot">Soft restart</string>
-    <string name="reboot">Restart</string>
+    <string name="install_header_reboot">Omstart</string>
+    <string name="soft_reboot">Rask omstart</string>
+    <string name="reboot">Omstart</string>
     <string name="areyousure">Er du sikker?</string>
     <string name="phone_not_compatible">Xposed er ikke (enda) kompitabel med Android SDK-versjon %1$d eller din prosessorarkitektur (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed har ikke blitt testet med Android SDK versjon %d, men den ser ut til å være kompitabel. Du kan prøve å installere hvis du føler deg tøff.</string>
-    <string name="reboot_failed">Restart failet. Vennligst bruk enhetens normale restartfunksjon.</string>
+    <string name="reboot_failed">Omstart feilet. Vennligst bruk enhetens normale omstartsfunksjon.</string>
     <string name="auto_flash_note">%s skal normalt flashes automatisk når du trykker "OK".</string>
     <string name="manual_flash_note">Vennligst flash %s fra SD-kortet for å fullføre operasjonen.</string>
-    <string name="reboot_confirmation">Ønsker du å restarte nå?</string>
-    <string name="reboot_recovery_confirmation">Ønsker du å restarte inn til recovery nå?</string>
+    <string name="reboot_confirmation">Ønsker du å omstarte nå?</string>
+    <string name="reboot_recovery_confirmation">Ønsker du å omstarte inn til recovery nå?</string>
     <string name="install_warning_title">Vær forsiktig!</string>
     <string name="install_warning">I noen tilfeller så vil ikke enheten din starte etter at du har installert Xposed..\n\nHvis du aldri har hørt om \"soft brick\" og \"bootloop\" før, eller om du ikke vet hvordan du kommer deg ut fra en slik situasjon, <b>IKKE</b> installer Xposed!\n\nI de fleste tilfeller så er en backup høyt anbefalt å ha liggende.</string>
     <string name="dont_show_again">Ikke vis dette igjen</string>
@@ -70,20 +70,20 @@
     <string name="file_creating_directory">Oppretter filbane %s&#8230;</string>
     <string name="file_create_directory_failed">Kunne ikke opprette filbane %s</string>
     <string name="file_writing_recovery_command">Skriver recovery-kommando&#8230;</string>
-    <string name="file_writing_recovery_command_failed">Skriving av recovery-kommando failet. Vennligst bruk en annen installasjonsmetode.</string>
-    <string name="file_done">Ferdig! Endringer vil bli aktive etter restart.</string>
+    <string name="file_writing_recovery_command_failed">Skriving av recovery-kommando feilet. Vennligst bruk en annen installasjonsmetode.</string>
+    <string name="file_done">Ferdig! Endringer vil bli aktive etter omstart.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed modul er ikke aktivert enda</string>
     <string name="module_is_not_activated_yet_detailed">%s har blitt installert, men er ikke aktivert enda.</string>
-    <string name="activate_and_reboot">Aktiver og restart</string>
+    <string name="activate_and_reboot">Aktiver og omstart</string>
     <string name="module_activated">Xposed-modul har blitt aktivert</string>
     <string name="module_empty_description">(ingen beskrivelse er gitt)</string>
-    <string name="module_no_ui">Denne modulen gir ikke et brukergrensesnitt</string>
+    <string name="module_no_ui">Denne modulen har ikke et brukergrensesnitt</string>
     <string name="no_xposed_modules_found">Ingen Xposed moduler ble funnet!</string>
-    <string name="xposed_module_list_updated">Xposed modul-liste var oppdatert\nEndringer vil bli aktivert etter restart</string>
+    <string name="xposed_module_list_updated">Xposed modul-liste var oppdatert\nEndringer vil bli aktivert etter omstart</string>
     <string name="xposed_module_updated_notification_title">Xposed-modul er blitt oppdatert</string>
-    <string name="xposed_module_updated_notification">Restart for å aktivere endringene</string>
+    <string name="xposed_module_updated_notification">Omstart for å aktivere endringene</string>
     <string name="warning_xposed_min_version">Denne modulen krever en nyere versjon av XposedBridge (%d) og kan dermed ikke aktiveres.</string>
     <string name="no_min_version_specified">Denne modulen spesifiserer ikke hvilken versjon av XposedBridge den krever.</string>
     <string name="warning_min_version_too_low">Denne modulen var laget for XposedBridge versjon %1$d, men grunnet uforenlige endringer i versjon %2$d, er den blitt deaktivert.</string>
@@ -116,7 +116,7 @@
     <string name="download_sorting_status">Sorter etter status</string>
     <string name="download_sorting_updated">Sorter etter siste oppdatering</string>
     <string name="download_sorting_created">Sorter etter opprettelsesdato</string>
-    <string name="download_section_framework">Rammeverk</string>
+    <string name="download_section_framework">Framework</string>
     <string name="download_section_update_available">Oppdatering tilgjengelig</string>
     <string name="download_section_installed">Installert</string>
     <string name="download_section_not_installed">Ikke installert</string>
@@ -142,7 +142,7 @@
     <string name="settings_disable_resources">Deaktiver ressurshooks</string>
     <string name="settings_disable_resources_summary">Løsning på konflikter med temamotorer\n<b>ADVARSEL:</b> Moduler som prøver å endre ressurser vil ikke fungere når dette er deaktivert.</string>
     <string name="settings_performance_experiment">Ytelseseksperiment</string>
-    <string name="settings_performance_experiment_summary">Hvis du aktiverer dette så kan systemytelsen din enten øke, senkes eller forbli det samme. Prøv det gjerne ut og rapporter tilbake med resultatene dine (hvis det i det hele tatt er noen). Du vil trenger å reinstallere rammeverket og restarte enheten din etter å ha endret dette valget.</string>
+    <string name="settings_performance_experiment_summary">Hvis du aktiverer dette så kan systemytelsen din enten øke, senkes eller forbli det samme. Prøv det gjerne ut og rapporter tilbake med resultatene dine (hvis det i det hele tatt er noen). Du må reinstallere Xposed Framework og omstarte enheten din etter å ha endret dette valget.</string>
     <string name="settings_group_app">Applikasjon</string>
     <string name="settings_theme">Tema</string>
     <string name="settings_theme_light">Lys</string>
@@ -154,21 +154,21 @@
     <string name="logs_save_failed">Kunne ikke skrive logg til SD-kort:</string>
     <string name="sdcard_not_writable">SD-kort ikke funnet eller ikke skrivbar</string>
     <string name="log_too_large">Loggfil er større enn %1$,d kB, hoppet over første %2$,d kB</string>
-    <string name="menuClearLog">Fjern logg nå</string>
-    <string name="logs_cleared">Logg fjernet suksessfult</string>
+    <string name="menuClearLog">Fjern loggen nå</string>
+    <string name="logs_cleared">Loggen ble fjernet</string>
     <string name="logs_clear_failed">Kunne ikke fjerne loggen:</string>
-    <string name="log_is_empty">Logg er tom</string>
+    <string name="log_is_empty">Det finnes ingen logg</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Hovedutvikler:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> and <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Vennligst <b>ikke</b> kontakt oss direkte for støtte. Bruk linken nedenfor.</string>
     <string name="about_translator_label">Oversetter:</string>
-    <string name="translator">LordManhattan, rosaage</string>
+    <string name="translator">LordManhattan, rosaage, TrekHackz</string>
     <string name="about_version_label">Versjon av appen:</string>
     <string name="about_source_label">Kildekode:</string>
     <string name="about_support_label">Få hjelp hos:</string>
-    <string name="about_support_warning">Denne linken er <b>kun</b> for installeren og rammeverket! Hvis du trenger hjelp med en modul, så <b>ikke</b> bruk den. Kontakt modulutvikleren i stedet.</string>
+    <string name="about_support_warning">Denne linken er <b>kun</b> for Xposed Installer og Xposed Framework! Hvis du trenger hjelp med en modul, så <b>ikke</b> bruk den. Kontakt modulutvikleren i stedet.</string>
     <string name="about_libraries_label">Brukte bibliotek:</string>
 
     <!-- DownloadView -->
