--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="file_remove_failed">Could not remove %s</string>
     <string name="file_creating_directory">Creating directory %s&#8230;</string>
     <string name="file_create_directory_failed">Could not create directory %s</string>
+    <string name="file_write_failed">Could not write %s</string>
     <string name="file_writing_recovery_command">Writing recovery command&#8230;</string>
     <string name="file_writing_recovery_command_failed">Writing recovery command failed. Please use a different installation method.</string>
     <string name="file_done">Done! Changes will become active on reboot.</string>
@@ -87,6 +88,7 @@
     <string name="warning_xposed_min_version">This module requires a newer XposedBridge version (%d) and thus cannot be activated.</string>
     <string name="no_min_version_specified">This module does not specify the XposedBridge version it needs.</string>
     <string name="warning_min_version_too_low">This module was created for XposedBridge version %1$d, but due to incompatible changes in version %2$d, it has been disabled.</string>
+    <string name="xposed_framework_is_not_installed">Xposed framework is not installed</string>
     <string name="module_launch">Launch UI</string>
     <string name="module_download_updates">Download/Updates</string>
     <string name="module_support">Support</string>
